--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
 
         <activity
-            android:theme="@style/Theme.App.Starting"
+            android:theme="@style/Theme.App.Splash"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
